Stop header overlapping internal links Add anchor above each link Remove jumbotron margin-bottom Add margin-top to Massive Academy Logo

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ footer {
   text-align: center;
   background-image: url('../img/hero-image.jpg');
   color: white;
+  margin-bottom: 0px;
 }
 .jumbotron h1 {
   margin-top: 0px;
@@ -68,4 +69,15 @@ footer {
   border-color: #e74c3c;
   width: 160px;
   margin-top: 15px;
+}
+
+.h2-image {
+  margin-top: 20px;
+}
+
+.anchor{
+  display: block;
+  height: 50px; /*same height as header*/
+  margin-top: -50px; /*same height as header*/
+  visibility: hidden;
 }
